fix(index): remove carousel buttons on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -9,10 +9,10 @@
 
 p.previa-blog {
   overflow: hidden;
- display: -webkit-box;
- -webkit-line-clamp: 3; /* número de linhas para exibir */
-         line-clamp: 3; 
- -webkit-box-orient: vertical;
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* número de linhas para exibir */
+  line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .searchCity {
@@ -30,17 +30,35 @@ p.previa-blog {
   font-style: italic;
 }
 
-.searchCity{
-    border: none;
-    border-bottom: 1px solid #666;
-    border-radius: 0;
-    padding: 4px;
-    background-color: #fff;
-    color: #666;
-    width: 200px;
+.searchCity {
+  border: none;
+  border-bottom: 1px solid #666;
+  border-radius: 0;
+  padding: 4px;
+  background-color: #fff;
+  color: #666;
+  width: 200px;
 }
 
 .searchCity::placeholder {
-    color: #9b9b9b;
-    font-style: italic;
+  color: #9b9b9b;
+  font-style: italic;
+}
+
+.carousel-control-prev {
+  display: none;
+}
+
+.carousel-control-next {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .carousel-control-prev {
+    display: block;
+  }
+
+  .carousel-control-next {
+    display: block;
+  }
 }
